--- a/mail/mail/templates/mail/inbox.html
+++ b/mail/mail/templates/mail/inbox.html
@@ -13,6 +13,11 @@
 
     <div id="emails-view">
     </div>
+    <div id="center_containter">
+        <div id="mail-view">
+        </div>
+    </div>
+    <!--DIV for viewing emails-->
 
     <div id="compose-view">
         <h3>New Email</h3>
@@ -27,7 +32,7 @@
                 <input class="form-control" id="compose-subject" placeholder="Subject">
             </div>
             <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
-            <input type="submit" class="btn btn-primary"/>
+            <input type="submit" class="btn btn-primary" value="Send"/>
         </form>
     </div>
 {% endblock %}
