--- a/mail/mail/static/mail/styles.css
+++ b/mail/mail/static/mail/styles.css
@@ -1,3 +1,16 @@
 textarea {
     min-height: 400px;
 }
+
+.unread-email {
+    border: 2px solid black;
+}
+
+.read-email {
+    border: 2px solid black;
+    background-color: red;
+}
+
+#center_containter {
+    text-align: center;
+}
