final version really

--- a/mail/mail/static/mail/styles.css
+++ b/mail/mail/static/mail/styles.css
@@ -8,7 +8,7 @@ textarea {
 
 .read-email {
     border: 2px solid black;
-    background-color: red;
+    background-color: grey;
 }
 
 #center_containter {
